# hat-hiring-challenge

./: .gitignore  .pre-commit-config.yaml  README.md  SCORECARD.md
challenge-01-acessibilidade/: .gitignore  CHALLENGE.md  Dockerfile  Makefile  README_CANDIDATO.md  docker-compose.yml  main.py  pyproject.toml
challenge-01-acessibilidade/src/api/routes/: gastos.py  orgaos.py
challenge-01-acessibilidade/src/api/tools/: __init__.py  exception_handlers.py  providers.py
challenge-01-acessibilidade/src/api/utils/: cache.py
challenge-01-acessibilidade/src/application/: __init__.py
challenge-01-acessibilidade/src/application/services/: gasto_service.py  orgaos_service.py
challenge-01-acessibilidade/src/domain/: __init__.py  enums.py  exceptions.py  models.py  repositories.py  schemas.py  services.py
challenge-01-acessibilidade/src/domain/repository/: __init__.py  gasto_repository.py  gasto_reposity.py  orgao_repository.py  types.py
challenge-01-acessibilidade/src/infra/: cache.py  database.py  seed.py
challenge-01-acessibilidade/src/infra/repository/: __init__.py  base_repository.py  gasto_repository.py  orgao_repository.py
challenge-01-acessibilidade/src/tests/: test_api_gastos.py  test_base_repository.py  test_cache.py  test_database.py  test_gasto_params.py  test_gasto_repository.py  test_gastos_api.py  test_orgao_repository.py  test_orgaos_api.py  test_params.py
challenge-01-acessibilidade/src/tests/api/routes/: test_gastos.py
challenge-01-acessibilidade/src/tests/api/tools/: test_exception_handlers.py
challenge-01-acessibilidade/src/tests/application/services/: test_gastos.py  test_orgaos.py
challenge-01-acessibilidade/src/tests/domain/: test_schemas.py
challenge-01-acessibilidade/src/tests/infra/repository/: test_base_repository.py  test_gasto_repository.py  test_orgao_repository.py
challenge-01-acessibilidade/src/tests/routes/: gastos_test.py
challenge-01-acessibilidade/src/tests/utils/: __init__.py  test_utils.py
challenge-01-acessibilidade/src/utils/api/: cache.py  types.py
challenge-01-acessibilidade/src/utils/repository/: __init__.py  types.py
challenge-02-sustentabilidade/: CHALLENGE.md  main.py  pyproject.toml
challenge-02-sustentabilidade/src/api/routes/: rotas.py
(+8 files in other folders)
