[project]
name = "hat-challenge-challenge-01-acessibilidade"
version = "0.1.0"
description = "HAT Thinking Technical Challenge — Painel de Transparência Pública"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.19",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "cachetools>=7.0.5",
    "uuid6>=2025.0.1",
    "fastapi-cache2[redis]>=0.2.2",
    "aiomcache>=0.8.2",
    "fastapi-pagination>=0.15.12",
    "jinja2[dev]>=3.1.6",
    "aiomcache>=0.8.2",
    "fastapi-pagination>=0.15.12",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "time-machine>=3.2.0",
    "jinja2>=3.1.6",
]
lint = [
    "ruff>=0.4.0",
    "black>=24.4.0",
]
git=[
    "pre-commit>=4.5.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=70"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.coverage.run]
omit = ["src/tests/*", "src/infra/seed.py"]
